# oxidized-cryptolib

./: .actrc  .env  .envrc  .gitignore  .secrets.example  AGENTS.md  CLAUDE.md  Cargo.toml  PHASE1_ANALYSIS.md  PHASE3_PLAN.md  PROFILING_ANALYSIS.md  README.md  REFACTORING_PLAN.md  ROADMAP.md  SCRATCHPAD.md  SECURITY.md  analyze_flamegraph.py  analyze_profiling.py  deny.toml  devenv.nix  extract_flamegraph_hotspots.py  rust-toolchain.toml
crates/oxcrypt/: Cargo.toml  README.md
crates/oxcrypt-bench/: Cargo.toml  README.md
crates/oxcrypt-bench/src/: cli.rs  config.rs  lib.rs  main.rs
crates/oxcrypt-cli/: Cargo.toml  README.md
crates/oxcrypt-cli/benches/: cli_operations.rs
crates/oxcrypt-cli/src/: auth.rs  config.rs  exit_code.rs  ipc.rs  main.rs  output.rs  state.rs
crates/oxcrypt-cli/tests/: cli_integration.rs
crates/oxcrypt-desktop/: Cargo.toml  Dioxus.toml  README.md  desktop.entitlements  input.css  package.json
crates/oxcrypt-desktop/assets/: main.css  tailwind.css
crates/oxcrypt-desktop/src/: app.rs  main.rs
crates/oxcrypt-fileprovider/: Cargo.toml  README.md  build.rs
crates/oxcrypt-fileprovider/extension/: Extension-Info.plist  Info.plist  OxCryptFileProvider-Release.entitlements  OxCryptFileProvider.entitlements  OxCryptFileProviderExtension-Release.entitlements  OxCryptFileProviderExtension.entitlements  PasswordRetrievalProtocol.swift  PasswordRetrievalService.swift  amp  build.sh  notarize.sh  project.yml
crates/oxcrypt-fileprovider/src/: backend.rs  extension_manager.rs  filesystem.rs  item.rs  lib.rs  recovery.rs  watcher.rs  xpc.rs  xpc_client.swift
crates/oxcrypt-fileprovider/tests/: crud_tests.rs  error_tests.rs  integrity_tests.rs  metadata_tests.rs  move_copy_tests.rs  workflow_tests.rs
crates/oxcrypt-fskit/: Cargo.toml  README.md  build.rs
crates/oxcrypt-fskit/extension/: Info.plist  OxVaultFSExtension.entitlements  Package.swift  project.yml
crates/oxcrypt-fskit/objc/: OxVaultServiceProtocol.h  OxVaultServiceProtocol.m
crates/oxcrypt-fskit/src/: backend.rs  error.rs  filesystem.rs  lib.rs
crates/oxcrypt-fskit/swift/: Package.swift
crates/oxcrypt-fskit/tests/: crud_tests.rs
crates/oxcrypt-fuse/: Cargo.toml  README.md
crates/oxcrypt-fuse/benches/: fuse_operations.rs  fuse_operations.rs.bak
crates/oxcrypt-fuse/src/: async_bridge.rs  attr.rs  backend.rs  config.rs  error.rs  executor.rs  filesystem.rs  handles.rs  inode.rs  lib.rs  main.rs
crates/oxcrypt-fuse/tests/: bugfix_tests.rs  concurrency_tests.rs  crud_tests.rs  directory_deletion.rs  error_tests.rs  fsstress_tests.rs  fsx_tests.rs  git2_consistency.rs  git_cleanup_mre.rs  integrity_tests.rs  metadata_tests.rs  move_copy_tests.rs  pjdfstest.rs  scheduler_stress.rs  workflow_tests.rs  write_read_consistency.rs
crates/oxcrypt-mount/: Cargo.toml  README.md
crates/oxcrypt-mount/src/: backend.rs  bounded_pool.rs  cleanup.rs  daemon.rs  error_category.rs  force_unmount.rs  handle_table.rs  lib.rs  moka_cache.rs  mount_markers.rs  mount_utils.rs  path_mapper.rs  process_detection.rs  signal.rs  stale_detection.rs  stats.rs  timeout_fs.rs  write_buffer.rs
crates/oxcrypt-nfs/: Cargo.toml
crates/oxcrypt-nfs/src/: backend.rs  error.rs  filesystem.rs  inode.rs  lib.rs  main.rs
crates/oxcrypt-nfs/tests/: concurrency_tests.rs  crud_tests.rs  error_tests.rs  integrity_tests.rs  move_copy_tests.rs
crates/oxcrypt-webdav/: Cargo.toml
crates/oxcrypt-webdav/src/: backend.rs  dir_entry.rs  error.rs  file.rs  filesystem.rs  lib.rs  metadata.rs  server.rs
crates/oxcrypt-webdav/tests/: concurrency_tests.rs  error_tests.rs  etag_tests.rs  integrity_tests.rs  lock_tests.rs  move_copy_tests.rs  propfind_tests.rs  range_tests.rs  workflow_tests.rs
crates/oxcrypt/src/: config.rs  exit_code.rs  ipc.rs  main.rs  state.rs
crates/oxcrypt/tests/: cli_integration.rs
crates/oxidized-bench/: Cargo.toml  README.md
crates/oxidized-bench/src/: cli.rs  config.rs  lib.rs  main.rs
crates/oxidized-cli/: Cargo.toml  README.md
crates/oxidized-cli/src/: ipc.rs  main.rs  output.rs  state.rs
crates/oxidized-cli/tests/: cli_integration.rs
crates/oxidized-cryptolib/: Cargo.toml
crates/oxidized-cryptolib/benches/: directory_operations.rs  file_operations.rs  file_operations_ctrmac.rs  timing_leaks.rs  vault_operations.rs  workflows.rs
crates/oxidized-cryptolib/src/: lib.rs
crates/oxidized-cryptolib/tests/: async_tests.rs  concurrency_stress_tests.rs  concurrency_tests.rs  crypto_tests.proptest-regressions  crypto_tests.rs  file_error_tests.rs  parity_tests.rs  streaming_tests.rs  vault_integration_tests.rs  write_operations_tests.rs  wycheproof_tests.rs
crates/oxidized-fskit/: Cargo.toml  README.md
crates/oxidized-fskit-ffi/: Cargo.toml
crates/oxidized-fskit-ffi/extension/: Info.plist  OxVaultFSExtension.entitlements  Package.swift  project.yml
crates/oxidized-fskit-ffi/src/: error.rs  filesystem.rs  types.rs
crates/oxidized-fskit-ffi/swift/: Package.swift
crates/oxidized-fskit-ffi/tests/: crud_tests.rs
crates/oxidized-fskit-legacy/: Cargo.toml  README.md
crates/oxidized-fskit-legacy/src/: attr.rs  backend.rs  item_table.rs  lib.rs  main.rs  setup.rs
crates/oxidized-fskit-legacy/tests/: append_tests.rs  concurrency_tests.rs  crud_tests.rs  error_tests.rs  integrity_tests.rs  large_file_tests.rs  long_filename_tests.rs  metadata_tests.rs  move_copy_tests.rs  partial_io_tests.rs  symlink_tests.rs  workflow_tests.rs
crates/oxidized-fskit/src/: attr.rs  backend.rs  error.rs  filesystem.rs  handles.rs  item_table.rs  lib.rs  main.rs  setup.rs
crates/oxidized-fuse/: Cargo.toml  README.md
crates/oxidized-fuse/benches/: fuse_operations.rs
crates/oxidized-fuse/src/: attr.rs  backend.rs  config.rs  error.rs  filesystem.rs  handles.rs  inode.rs  lib.rs  (+1 more)
crates/oxidized-gui/: Cargo.toml  Dioxus.toml  README.md  input.css  package.json
crates/oxidized-mount-common/: Cargo.toml
crates/oxidized-nfs/: Cargo.toml
crates/oxidized-webdav/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_aes_gcm_decrypt.rs  fuzz_aes_siv_decrypt.rs  fuzz_key_unwrap.rs
(+9626 files in other folders)
