[workspace]
resolver = "2"
members = ["crates/oxcrypt-core", "crates/oxcrypt", "crates/oxcrypt-fuse", "crates/oxcrypt-fskit", "crates/oxcrypt-webdav", "crates/oxcrypt-nfs", "crates/oxcrypt-desktop", "crates/oxbench", "crates/oxcrypt-mount"]
# Note: oxcrypt-fuse requires macFUSE (macOS) or libfuse (Linux) to be installed
# Note: oxcrypt-fskit requires macOS 15.4+ and the Swift extension enabled
# Note: oxcrypt-webdav provides WebDAV mounting (no kernel extensions required)
exclude = ["fuzz"]

[workspace.package]
edition = "2024"
rust-version = "1.90"
license = "MPL-2.0"
repository = "https://github.com/agucova/oxcrypt"

[workspace.dependencies]
oxcrypt-core = { path = "crates/oxcrypt-core" }
clap = { version = "4.5", features = ["derive", "wrap_help", "env"] }
rpassword = "7.4"
comfy-table = "7.2"
anyhow = "1.0"
thiserror = "2"
tracing = "0.1"
console-subscriber = { version = "0.5" }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2

# Patch fuser to fix macOS rename bug (truncated source filename)
# See: https://github.com/cberner/fuser/pull/342
# This patches fuser globally to 0.15.1 with the fix. Linux stays on 0.15.1 too.
# TODO: Remove this patch when fuser 0.17+ is released with the fix
[patch.crates-io]
fuser = { git = "https://github.com/nicolaspapp/fuser.git", rev = "f4b1ba26c340c45a6c205c471333b806302d6acf" }
