[package]
name = "oxcrypt-bench"
version = "0.1.0"
description = "Cross-implementation filesystem benchmark harness for Cryptomator vaults"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["cryptomator", "benchmark", "fuse", "fskit", "filesystem"]
categories = ["filesystem", "development-tools::profiling"]

[[bin]]
name = "oxbench"
path = "src/main.rs"
test = false

[dependencies]
# Workspace dependencies
oxcrypt-core = { workspace = true, features = ["async"] }

# High-performance allocator (optional, enabled by default)
mimalloc = { version = "0.1", default-features = false, features = ["v3"], optional = true }
clap = { workspace = true }
rpassword = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-indicatif = "0.3"

# Mount backend abstraction
oxcrypt-mount = { path = "../oxcrypt-mount" }

# FUSE filesystem
oxcrypt-fuse = { path = "../oxcrypt-fuse" }
zip = "2"

# fuser platform-specific: macfuse-4-compat required on macOS for rename fix
[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.16", features = ["abi-7-23"] }

[target.'cfg(target_os = "macos")'.dependencies]
fuser = { version = "0.16", features = ["libfuse", "abi-7-23", "macfuse-4-compat"] }

# WebDAV backend
oxcrypt-webdav = { path = "../oxcrypt-webdav" }

# NFS backend
oxcrypt-nfs = { path = "../oxcrypt-nfs" }

# File Provider backend (macOS only, optional)
oxcrypt-fileprovider = { path = "../oxcrypt-fileprovider", optional = true }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "signal", "sync", "macros", "fs", "io-util"] }

# Terminal UI
owo-colors = "4"
terminal_size = "0.4"
indicatif = "0.18"

# Statistics (HDR Histogram for percentile calculations)
hdrhistogram = "7"

# High-precision timing
quanta = "0.12"

# Signal handling (no termination feature - it modifies exit behavior)
ctrlc = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Random number generation for benchmarks
rand = "0.9"
rand_chacha = "0.9"
statrs = "0.18.0"
chrono = { version = "0.4.42", features = ["serde"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
# Git operations for benchmark - use vendored libgit2 without SSH (no OpenSSL needed)
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
ureq = "3"
dirs = "6"
sha2 = "0.10"
tar = "0.4"
flate2 = "1"
zip = "2"
hex = "0.4.3"

# FSKit (macOS 15.4+ only)
# Note: oxbench uses a stub FSKit backend since the full implementation
# requires the Swift extension. Use the GUI (oxvault) for FSKit support.
# [target.'cfg(target_os = "macos")'.dependencies]
# oxcrypt-fskit = { path = "../oxcrypt-fskit" }
# fskit-rs = { git = "https://github.com/debox-network/fskit-rs", branch = "main" }

[features]
default = ["mimalloc"]
# High-performance allocator for reduced allocation latency
mimalloc = ["dep:mimalloc"]
# File Provider backend (macOS only)
fileprovider = ["dep:oxcrypt-fileprovider"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.30", features = ["fs"] }
# CPU profiling and flamegraph generation
pprof = { version = "0.14", features = ["flamegraph", "prost-codec"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[profile.release]
debug = true
