[package]
name = "oxcrypt-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Cryptomator vaults"
readme = "README.md"
keywords = ["cryptomator", "encryption", "vault", "cli"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "oxcrypt"
path = "src/main.rs"

[features]
# No default backend - users must opt-in based on platform
# Linux/macOS: --features fuse (or fskit on macOS 15.4+)
# Windows: --features webdav
default = ["mimalloc"]
# High-performance allocator for reduced allocation latency
mimalloc = ["dep:mimalloc"]

# FUSE backend support (macOS with macFUSE, Linux with libfuse)
# Not available on Windows
fuse = ["dep:oxcrypt-fuse"]
# FSKit backend support (macOS 15.4+ only)
fskit = ["dep:oxcrypt-fskit"]
# WebDAV backend support (cross-platform, no kernel extensions required)
webdav = ["dep:oxcrypt-webdav"]
# NFS backend support (macOS, Linux - no kernel extensions required)
nfs = ["dep:oxcrypt-nfs"]
# File Provider backend support (macOS 13+ only, cloud storage integration)
fileprovider = ["dep:oxcrypt-fileprovider"]

# Enable all Unix mount backends (for development)
unix-backends = ["fuse", "fskit", "webdav", "nfs", "fileprovider"]
# Enable all mount backends that work on the current platform
all-backends = ["fuse", "fskit", "webdav", "nfs", "fileprovider"]

# Platform-specific convenience features
macos-defaults = ["fuse", "fskit", "webdav", "fileprovider"]
linux-defaults = ["fuse", "webdav"]
windows-defaults = ["webdav"]

# Enable tokio-console for async debugging (forwards to all backends)
tokio-console = [
    "dep:console-subscriber",
    "dep:tokio",
    "tokio/tracing",
    "oxcrypt-fuse?/tokio-console",
    "oxcrypt-webdav?/tokio-console",
    "oxcrypt-nfs?/tokio-console",
]

[dependencies]
oxcrypt-core.workspace = true
clap.workspace = true

# High-performance allocator (optional, enabled by default)
mimalloc = { version = "0.1", default-features = false, features = ["v3"], optional = true }
rpassword.workspace = true
comfy-table.workspace = true
anyhow.workspace = true
serde_json = "1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing.workspace = true

# Signal handling for mount command
ctrlc = { version = "3", features = ["termination"] }

# Mount backends (optional)
oxcrypt-fuse = { path = "../oxcrypt-fuse", optional = true }
oxcrypt-fskit = { path = "../oxcrypt-fskit", optional = true }
oxcrypt-webdav = { path = "../oxcrypt-webdav", optional = true }
oxcrypt-nfs = { path = "../oxcrypt-nfs", optional = true }
oxcrypt-fileprovider = { path = "../oxcrypt-fileprovider", optional = true }

# Optional: tokio-console for async debugging
console-subscriber = { workspace = true, optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
directories = "6.0.0"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4"] }
nix = { version = "0.30.1", features = ["signal", "process", "user"] }
fs2 = "0.4.3"
oxcrypt-mount = { version = "0.1.0", path = "../oxcrypt-mount" }
toml = "0.9.10"
clap_complete = "4.5.63"
tracing-appender = "0.2.4"

# Platform-specific dependencies for process management
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }
uuid = { version = "1.19.0", features = ["v4"] }
chrono = "0.4.42"
directories = "6.0.0"
serial_test = { version = "3.2.0", features = ["file_locks"] }

[[bench]]
name = "cli_operations"
harness = false

[lints]
workspace = true
