[package]
name = "oxcrypt-desktop"
version = "0.1.0"
description = "Desktop GUI for Cryptomator vault management"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "oxcrypt-desktop"
path = "src/main.rs"

[dependencies]
# GUI framework
dioxus = { version = "0.7", features = ["desktop"] }

# Backend integration
oxcrypt-core = { path = "../oxcrypt-core" }
oxcrypt-mount = { path = "../oxcrypt-mount" }

# Mount backends (all optional for cross-platform support)
oxcrypt-fuse = { path = "../oxcrypt-fuse", optional = true }
oxcrypt-fskit = { path = "../oxcrypt-fskit", optional = true }
oxcrypt-nfs = { path = "../oxcrypt-nfs", optional = true }
oxcrypt-webdav = { path = "../oxcrypt-webdav", optional = true }

# Optional: tokio-console for async debugging
console-subscriber = { workspace = true, optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System integration
directories = "6"        # XDG config paths
dirs = "6"               # Home directory detection
open = "5"               # Open file manager
rfd = "0.16"             # Native file dialogs
tray-icon = "0.21"       # System tray support (match dioxus-desktop)
muda = "0.17"            # Menu library (match dioxus-desktop)
crossbeam-channel = "0.5" # Thread-safe channels for tray events

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror.workspace = true
ctrlc = "3.5.1"
image = { version = "0.25.9", features = ["png", "tiff"] }
plotters = { version = "0.3.7", features = ["svg_backend"] }
fs2 = "0.4.3"
anyhow.workspace = true

[features]
# No default backend - platform-specific features should be enabled at build time
# Linux/macOS: --features fuse (or fskit on macOS 15.4+)
# Windows: --features webdav
default = []

# FUSE backend (macOS with macFUSE, Linux with libfuse)
# Not available on Windows
fuse = ["dep:oxcrypt-fuse"]

# FSKit backend (macOS 15.4+ only)
fskit = ["dep:oxcrypt-fskit"]

# WebDAV backend (cross-platform, no kernel extensions required)
webdav = ["dep:oxcrypt-webdav"]

# NFS backend (Unix only, no kernel extensions required)
nfs = ["dep:oxcrypt-nfs"]

# All Unix backends
unix-backends = ["fuse", "fskit", "nfs", "webdav"]

# Enable tokio-console for async debugging (forwards to all backends)
tokio-console = [
    "dep:console-subscriber",
    "tokio/tracing",
    "oxcrypt-fuse?/tokio-console",
    "oxcrypt-nfs?/tokio-console",
    "oxcrypt-webdav?/tokio-console",
]

# macOS-only: SF Symbols support via AppKit
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSString"] }
objc2-app-kit = { version = "0.3", features = [
    "NSImage",
    "NSBitmapImageRep",
    "NSGraphicsContext",
    "NSImageRep",
] }

[dev-dependencies]
tempfile = "3"
