[package]
name = "oxcrypt-desktop"
version = "0.1.0"
description = "Desktop GUI for Cryptomator vault management"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["cryptomator", "encryption", "vault", "gui"]
categories = ["cryptography"]

[[bin]]
name = "oxcrypt-desktop"
path = "src/main.rs"

[dependencies]
# GUI framework
dioxus = { version = "0.7", features = ["desktop"] }

# Backend integration
oxcrypt-core = { path = "../oxcrypt-core" }
oxcrypt-mount = { path = "../oxcrypt-mount" }

# Mount backends (all optional for cross-platform support)
oxcrypt-fuse = { path = "../oxcrypt-fuse", optional = true }
oxcrypt-fileprovider = { path = "../oxcrypt-fileprovider", optional = true }
oxcrypt-nfs = { path = "../oxcrypt-nfs", optional = true }
oxcrypt-webdav = { path = "../oxcrypt-webdav", optional = true }

# Optional: tokio-console for async debugging
console-subscriber = { workspace = true, optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System integration
directories = "6"        # XDG config paths
dirs = "6"               # Home directory detection
open = "5"               # Open file manager
rfd = "0.16"             # Native file dialogs
tray-icon = "0.21"       # System tray support (match dioxus-desktop)
muda = "0.17"            # Menu library (match dioxus-desktop)
crossbeam-channel = "0.5" # Thread-safe channels for tray events

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror.workspace = true
ctrlc = "3.5.1"
image = { version = "0.25.9", features = ["png", "tiff"] }
plotters = { version = "0.3.7", features = ["svg_backend"] }
fs2 = "0.4.3"
anyhow.workspace = true
parking_lot = "0.12.5"
tracing-appender = "0.2.4"
chrono = { version = "0.4.42", features = ["serde"] }
nix = { version = "0.30.1", features = ["signal"] }

# High-performance allocator (optional, enabled by default)
mimalloc = { version = "0.1", default-features = false, features = ["v3"], optional = true }
base64 = "0.22.1"

[features]
# Default backends: Include commonly used backends
# - fuse: Cross-platform (requires macFUSE on macOS or libfuse on Linux)
# - fileprovider: macOS 13+ only (native, no installation needed)
# - webdav: Cross-platform (no installation needed)
# - nfs: Unix only (no installation needed)
default = ["mimalloc", "fuse", "fileprovider", "webdav", "nfs"]

# High-performance allocator for reduced allocation latency
mimalloc = ["dep:mimalloc"]

# FUSE backend (macOS with macFUSE, Linux with libfuse)
# Not available on Windows
fuse = ["dep:oxcrypt-fuse"]

# File Provider backend (macOS 13+ only)
fileprovider = ["dep:oxcrypt-fileprovider"]

# WebDAV backend (cross-platform, no kernel extensions required)
webdav = ["dep:oxcrypt-webdav"]

# NFS backend (Unix only, no kernel extensions required)
nfs = ["dep:oxcrypt-nfs"]

# All Unix backends
unix-backends = ["fuse", "fileprovider", "nfs", "webdav"]

# Enable tokio-console for async debugging (forwards to all backends)
tokio-console = [
    "dep:console-subscriber",
    "tokio/tracing",
    "oxcrypt-fuse?/tokio-console",
    "oxcrypt-nfs?/tokio-console",
    "oxcrypt-webdav?/tokio-console",
]

# macOS-only: SF Symbols support via AppKit
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSString"] }
objc2-app-kit = { version = "0.3", features = [
    "NSImage",
    "NSBitmapImageRep",
    "NSGraphicsContext",
    "NSImageRep",
] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
