[package]
name = "oxcrypt-fileprovider"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Apple File Provider backend for Cryptomator vault mounting"
readme = "README.md"
keywords = ["cryptomator", "fileprovider", "encryption", "macos"]
categories = ["filesystem", "cryptography"]

[lib]
crate-type = ["staticlib", "lib"]
name = "oxcrypt_fileprovider"

[dependencies]
oxcrypt-core = { workspace = true, features = ["async"] }
oxcrypt-mount = { path = "../oxcrypt-mount" }
swift-bridge = { version = "0.1.58", features = ["async"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
dashmap = "6"
tracing = { workspace = true }
libc = "0.2"
thiserror.workspace = true
base64 = "0.22"
dirs = "6"
include_dir = "0.7"
sha2 = "0.10"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
block2 = "0.6"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }

[build-dependencies]
cc = "1.2"
swift-bridge-build = "0.1.58"
sha2 = "0.10"
include_dir = "0.7"

[dev-dependencies]
tempfile = "3.24.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sha2 = "0.10"
rand = "0.9"
hex = "0.4"

[features]
default = []
# Enable tokio-console for async debugging
tokio-console = []
# Enable integration tests (requires File Provider extension to be enabled)
fileprovider-tests = []

[lints]
workspace = true
