[package]
name = "oxcrypt-fuse"
version = "0.1.0"
description = "FUSE filesystem for Cryptomator vaults"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["cryptomator", "fuse", "encryption", "filesystem"]
categories = ["filesystem", "cryptography"]

[lib]
test = false

[[bin]]
name = "oxmount"
path = "src/main.rs"
test = false

[dependencies]
oxcrypt-core = { workspace = true, features = ["async"] }

# High-performance allocator (optional, enabled by default)
mimalloc = { version = "0.1", default-features = false, features = ["v3"], optional = true }
clap = { workspace = true }
rpassword = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# FUSE
libc = "0.2"
oxcrypt-mount = { version = "0.1.0", path = "../oxcrypt-mount" }
num_cpus = "1.17.0"
once_cell = "1.21.3"
filetime = "0.2.26"
crossbeam-channel = "0.5"
bytes = "1.11.0"
moka = { version = "0.12.12", features = ["sync"] }

# fuser: pure-rust on Linux, libfuse on macOS
# Using abi-7-23 for FUSE_WRITEBACK_CACHE support (mmap compatibility)
# macfuse-4-compat required on macOS for correct fuse_rename_in struct size (16 bytes with flags/padding)
[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.16", features = ["abi-7-23"] }

[target.'cfg(target_os = "macos")'.dependencies]
fuser = { version = "0.16", features = ["libfuse", "abi-7-23", "macfuse-4-compat"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "signal", "sync", "macros", "time"] }

# Concurrent data structures
dashmap = "6"
crossbeam-channel = "0.5"

# Security
zeroize = "1"

# Signal handling (termination feature enables SIGTERM/SIGHUP handling)
ctrlc = { version = "3", features = ["termination"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal", "fs"] }

# Optional: tokio-console for async debugging
console-subscriber = { workspace = true, optional = true }

[features]
default = ["mimalloc"]
# High-performance allocator for reduced allocation latency
mimalloc = ["dep:mimalloc"]
# Enable FUSE integration tests (requires FUSE installed + external test tools)
fuse-tests = []
# Enable tokio-console for async debugging (run `tokio-console` in another terminal)
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }
# Testing utilities (generators, assertions, temp vault creation)
oxcrypt-mount = { path = "../oxcrypt-mount" }
# Tokio with time feature for executor tests
tokio = { version = "1", features = ["time"] }
git2 = { version = "0.20.3", features = ["vendored-libgit2"], default-features = false }
reqwest = { version = "0.13.1", features = ["blocking"] }
zip = "7.0.0"

[[bench]]
name = "fuse_operations"
harness = false

[lints]
workspace = true
