[package]
name = "oxcrypt-mount"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities for Cryptomator vault mount backends (FUSE, FSKit, WebDAV)"
readme = "README.md"
keywords = ["cryptomator", "filesystem", "mount", "caching"]
categories = ["filesystem", "cryptography"]

[features]
default = []
# Enable detailed tracing spans for cache operations (debug instrumentation).
# This adds some overhead but provides visibility into cache behavior.
cache-tracing = []

[dependencies]
anyhow.workspace = true
dashmap = "6"
moka = { version = "0.12", features = ["sync", "future"] }
humantime-serde = "1"
libc = "0.2.178"
nix = { version = "0.30.1", features = ["signal", "process"] }
oxcrypt-core = { path = "../oxcrypt-core" }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror.workspace = true
tracing.workspace = true
signal-hook = "0.4.1"
parking_lot = "0.12.5"
bitvec = "1.0.1"

[dev-dependencies]
proptest = "1.4"
tokio = { version = "1", features = ["rt", "macros", "time"] }

[lints]
workspace = true
