[package]
name = "oxcrypt-nfs"
version = "0.1.0"
description = "NFS mount backend for Cryptomator vaults"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["cryptomator", "nfs", "encryption", "filesystem"]
categories = ["filesystem", "cryptography"]

[[bin]]
name = "oxnfs"
path = "src/main.rs"

[dependencies]
oxcrypt-core = { workspace = true, features = ["async"] }
oxcrypt-mount = { version = "0.1.0", path = "../oxcrypt-mount" }
clap = { workspace = true }
rpassword = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# NFS server
nfsserve = "0.10"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "signal", "sync", "macros", "net", "process", "time"] }
async-trait = "0.1"

# Concurrent data structures
dashmap = "6"

# Lazy static initialization
once_cell = "1.19"

# POSIX types
libc = "0.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal", "fs", "mount"] }

# Optional: tokio-console for async debugging
console-subscriber = { workspace = true, optional = true }

# High-performance allocator (optional, enabled by default)
mimalloc = { version = "0.1", default-features = false, features = ["v3"], optional = true }

[features]
default = ["mimalloc"]
# High-performance allocator for reduced allocation latency
mimalloc = ["dep:mimalloc"]
# Enable NFS integration tests
nfs-tests = []
# Enable tokio-console for async debugging (run `tokio-console` in another terminal)
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

[dev-dependencies]
tempfile = "3"
rand = "0.9"
sha2 = "0.10"

[lints]
workspace = true
