[package]
name = "oxidized-bench"
version = "0.1.0"
description = "Cross-implementation filesystem benchmark harness for Cryptomator vaults"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["cryptomator", "benchmark", "fuse", "fskit", "filesystem"]
categories = ["filesystem", "development-tools::profiling"]

[[bin]]
name = "oxbench"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
oxidized-cryptolib = { workspace = true, features = ["async"] }
clap = { workspace = true }
rpassword = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
comfy-table = { workspace = true }

# FUSE filesystem
oxidized-fuse = { path = "../oxidized-fuse" }
fuser = "0.16"

# WebDAV backend
oxidized-webdav = { path = "../oxidized-webdav" }

# NFS backend
oxidized-nfs = { path = "../oxidized-nfs" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "signal", "sync", "macros", "fs", "io-util"] }

# Terminal UI
owo-colors = "4"
terminal_size = "0.4"
indicatif = "0.17"

# Statistics (HDR Histogram for percentile calculations)
hdrhistogram = "7"

# High-precision timing
quanta = "0.12"

# Signal handling
ctrlc = { version = "3", features = ["termination"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Random number generation for benchmarks
rand = "0.8"
rand_chacha = "0.3"

# FSKit (macOS 15.4+ only)
[target.'cfg(target_os = "macos")'.dependencies]
oxidized-fskit = { path = "../oxidized-fskit" }
fskit-rs = { git = "https://github.com/debox-network/fskit-rs", branch = "main" }

[features]
default = []

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.30", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
