[package]
name = "oxidized-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Cryptomator vaults"

[[bin]]
name = "oxcrypt"
path = "src/main.rs"

[features]
default = ["fuse"]
# FUSE backend support (macOS with macFUSE, Linux with libfuse)
fuse = ["dep:oxidized-fuse"]
# FSKit backend support (macOS 15.4+ only)
fskit = ["dep:oxidized-fskit"]
# Enable all mount backends
all-backends = ["fuse", "fskit"]

[dependencies]
oxidized-cryptolib.workspace = true
clap.workspace = true
rpassword.workspace = true
comfy-table.workspace = true
anyhow.workspace = true
serde_json = "1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing.workspace = true

# Signal handling for mount command
ctrlc = { version = "3", features = ["termination"] }

# Mount backends (optional)
oxidized-fuse = { path = "../oxidized-fuse", optional = true }
oxidized-fskit = { path = "../oxidized-fskit", optional = true }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "cli_operations"
harness = false
