[package]
name = "oxidized-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Cryptomator vaults"

[[bin]]
name = "oxcrypt"
path = "src/main.rs"

[features]
# No default backend - users must opt-in based on platform
# Linux/macOS: --features fuse (or fskit on macOS 15.4+)
# Windows: --features webdav
default = []

# FUSE backend support (macOS with macFUSE, Linux with libfuse)
# Not available on Windows
fuse = ["dep:oxidized-fuse"]
# FSKit backend support (macOS 15.4+ only)
fskit = ["dep:oxidized-fskit"]
# WebDAV backend support (cross-platform, no kernel extensions required)
webdav = ["dep:oxidized-webdav"]
# NFS backend support (macOS, Linux - no kernel extensions required)
nfs = ["dep:oxidized-nfs"]

# Enable all Unix mount backends (for development)
unix-backends = ["fuse", "fskit", "webdav", "nfs"]
# Enable all mount backends that work on the current platform
all-backends = ["fuse", "fskit", "webdav", "nfs"]

[dependencies]
oxidized-cryptolib.workspace = true
clap.workspace = true
rpassword.workspace = true
comfy-table.workspace = true
anyhow.workspace = true
serde_json = "1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing.workspace = true

# Signal handling for mount command
ctrlc = { version = "3", features = ["termination"] }

# Mount backends (optional)
oxidized-fuse = { path = "../oxidized-fuse", optional = true }
oxidized-fskit = { path = "../oxidized-fskit", optional = true }
oxidized-webdav = { path = "../oxidized-webdav", optional = true }
oxidized-nfs = { path = "../oxidized-nfs", optional = true }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "cli_operations"
harness = false
